[gd_scene load_steps=5 format=3 uid="uid://c8dkj5105sudy"]

[ext_resource type="Script" uid="uid://c4cjtprbab6k8" path="res://scenes/UI/overlay/main_overlay.gd" id="1_ptuwb"]
[ext_resource type="Texture2D" uid="uid://13o6ipn5e7pq" path="res://textures/ui/overlay/timeline_overlay.png" id="2_h5tom"]
[ext_resource type="Texture2D" uid="uid://bmquopeoglj67" path="res://textures/ui/overlay/timeline_key_overlay.png" id="3_lcior"]

[sub_resource type="Theme" id="Theme_0du6a"]
HBoxContainer/constants/separation = 2
VBoxContainer/constants/separation = 4

[node name="MainOverlay" type="CanvasLayer"]
layer = 50

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_0du6a")
script = ExtResource("1_ptuwb")

[node name="MainInfo" type="VBoxContainer" parent="Overlay"]
layout_mode = 2
anchor_left = 0.008
anchor_top = 0.015
anchor_right = 0.099
anchor_bottom = 0.045
offset_left = 0.639999
offset_top = -0.200001
offset_right = -0.0800323
offset_bottom = 0.399998

[node name="TimelineOverlay" type="HBoxContainer" parent="Overlay/MainInfo"]
unique_name_in_owner = true
layout_mode = 2

[node name="TimelineInfo" type="MarginContainer" parent="Overlay/MainInfo/TimelineOverlay"]
layout_mode = 2

[node name="TimelineNinePatch" type="NinePatchRect" parent="Overlay/MainInfo/TimelineOverlay/TimelineInfo"]
layout_mode = 2
texture = ExtResource("2_h5tom")
patch_margin_left = 32
patch_margin_top = 24
patch_margin_right = 32
patch_margin_bottom = 24

[node name="LabelAlign" type="MarginContainer" parent="Overlay/MainInfo/TimelineOverlay/TimelineInfo"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 6

[node name="TimelineLabel" type="RichTextLabel" parent="Overlay/MainInfo/TimelineOverlay/TimelineInfo/LabelAlign"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "TIMELINE_UI"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="TimelineKeyInfo" type="MarginContainer" parent="Overlay/MainInfo/TimelineOverlay"]
layout_mode = 2

[node name="TimelineKeyNinePatch" type="NinePatchRect" parent="Overlay/MainInfo/TimelineOverlay/TimelineKeyInfo"]
layout_mode = 2
texture = ExtResource("3_lcior")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="LabelAlign" type="MarginContainer" parent="Overlay/MainInfo/TimelineOverlay/TimelineKeyInfo"]
layout_mode = 2
theme_override_constants/margin_right = 4

[node name="TimelineKeyLabel" type="RichTextLabel" parent="Overlay/MainInfo/TimelineOverlay/TimelineKeyInfo/LabelAlign"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Q"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
